package CarRentalSystem.enums;

public enum PaymentMode {
    CREDIT_CARD,
    DEBIT_CARD,
    CASH,
    UPI
}
