package CarRentalSystem.enums;

public enum ReservationStatus {
    SCHEDULED,
    IN_USE,
    COMPLETED,
    CANCELLED
}
