package CarRentalSystem.enums;

public enum ReservationType {
    HOURLY,
    DAILY
}
