package CarRentalSystem.enums;

public enum VehicleStatus {
    AVAILABLE,
    BOOKED,
    MAINTENANCE
}
