package CarRentalSystem.enums;

public enum VehicleType {
    FOUR_WHEELER,
    TWO_WHEELER
}
